--- a/MauiSeekBar/MainPage.xaml
+++ b/MauiSeekBar/MainPage.xaml
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:MauiSeekBar"
              x:Class="MauiSeekBar.MainPage">
+    <Grid RowDefinitions="*,100">
+        <Grid Grid.Row="0" BackgroundColor="Black"></Grid>
+        <local:SeekBar Grid.Row="1"/>
+    </Grid>
 </ContentPage>
