--- a/MauiSeekBar/MainPage.xaml
+++ b/MauiSeekBar/MainPage.xaml
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:local="clr-namespace:MauiSeekBar"
              x:Class="MauiSeekBar.MainPage">
     <Grid RowDefinitions="*,100">
-        <Grid Grid.Row="0" Margin="10,10,10,0" BackgroundColor="Black"></Grid>
+        <toolkit:MediaElement Grid.Row="0" Margin="10,10,10,0" Source="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" ShouldShowPlaybackControls="False"/>
         <local:SeekBar Grid.Row="1" Margin="5,0,5,5" IsStartAndEndMarkerVisible="True"/>
     </Grid>
 </ContentPage>
