--- a/MauiSeekBar/MainPage.xaml
+++ b/MauiSeekBar/MainPage.xaml
@@ -3,9 +3,18 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:local="clr-namespace:MauiSeekBar"
-             x:Class="MauiSeekBar.MainPage">
+             x:Class="MauiSeekBar.MainPage"
+             x:DataType="local:MainViewModel">
     <Grid RowDefinitions="*,100">
-        <toolkit:MediaElement Grid.Row="0" Margin="10,10,10,0" Source="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" ShouldShowPlaybackControls="False"/>
+        <toolkit:MediaElement x:Name="media"
+                              Grid.Row="0"
+                              Margin="10,10,10,0"
+                              ShouldShowPlaybackControls="False"
+                              Source="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+            <toolkit:MediaElement.GestureRecognizers>
+                <TapGestureRecognizer Command="{Binding PlayOrPauseCommand}"/>
+            </toolkit:MediaElement.GestureRecognizers>
+        </toolkit:MediaElement>
         <local:SeekBar Grid.Row="1" Margin="5,0,5,5" IsStartAndEndMarkerVisible="True"/>
     </Grid>
 </ContentPage>
