--- a/MauiSeekBar/MainPage.xaml
+++ b/MauiSeekBar/MainPage.xaml
@@ -10,6 +10,7 @@
                            Margin="10,10,10,0"
                            Position="{Binding Position}"
                            Duration="{Binding Duration}"
+                           IsPlaying="{Binding IsPlaying}"
                            Source="file:///C:/Temp/mp4.mp4">
             <local:VideoPlayer.GestureRecognizers>
                 <TapGestureRecognizer Command="{Binding PlayOrPauseCommand}"/>
@@ -19,6 +20,12 @@
                        Margin="5,0,5,5"
                        IsStartAndEndMarkerVisible="True"
                        Position="{Binding Position}"
-                       Duration="{Binding Duration}"/>
+                       Duration="{Binding Duration}">
+            <local:SeekBar.Triggers>
+                <DataTrigger TargetType="local:SeekBar" Binding="{Binding IsPlaying}" Value="False">
+                    <Setter Property="IsPositionTextVisible" Value="True"/>
+                </DataTrigger>
+            </local:SeekBar.Triggers>
+        </local:SeekBar>
     </Grid>
 </ContentPage>
